--- a/n_beats_exreme_values.ipynb
+++ b/n_beats_exreme_values.ipynb
@@ -38,7 +38,7 @@
       "source": [
         "! pip install darts"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +137,7 @@
         "import pandas as pd\n",
         "series_ai = pd.read_csv('/content/ai_count_no_ouliers.csv')\n"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -162,7 +162,7 @@
         "#plt.show()\n",
         "#fig1.savefig('tweet_count.png')"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -173,7 +173,7 @@
       "source": [
         "train_tweet_count, val_tweet_count = series_ai_count.split_after(pd.Timestamp('20200930'))"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -184,7 +184,7 @@
       "source": [
         "import torch"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -205,7 +205,7 @@
         "    return False  \n",
         "    \n"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -215,39 +215,64 @@
       },
       "source": [
         "def extreme_tensor(pred_tensor,true_tensor):\n",
-        "  hi_th = 0.65\n",
-        "  lw_th = 0.2\n",
-        "  high_tensor = torch.full((pred_tensor.size[0],pred_tensor.size[1],pred_tensor.size[2]), hi_th)\n",
-        "  lw_tensor = torch.full((pred_tensor.size[0],pred_tensor.size[1],pred_tensor.size[2]), hi_th)\n",
-        "  #compare the pred with the high and low_tensor\n",
-        "  pred_comp_hi = torch.tensor.gt(pred_tensor,high_tensor)\n",
-        "  pred_comp_lw = torch.tensor.le(pred_tensor,lw_tensor)\n",
-        "  \n",
-        "  # an or to know if it is extreme or not  \n",
-        "  extreme_pred = torch.logical_or(pred_comp_hi,pred_comp_lw)\n",
-        "  #compare the true with the high and low\n",
-        "  true_comp_hi = torch.tensor.gt(true_tensor,high_tensor)\n",
-        "  true_comp_lw = torch.tensor.le(true_tensor,lw_tensor)\n",
-        "  \n",
-        "  # an and to know if it is extreme or not\n",
-        "  extreme_true = torch.logical_and(true_comp_hi,true_comp_lw)\n",
-        "  #get the and of the 2 above\n",
-        "  \n",
-        "  extreme_final = torch.logical_and(extreme_pred,extreme_true)\n",
+        "    hi_th = 0.65\n",
+        "    lw_th = 0.2\n",
+        "#    high_tensor = torch.full((pred_tensor.size[0],pred_tensor.size[1],pred_tensor.size[2]), hi_th)\n",
+        "#    lw_tensor = torch.full((pred_tensor.size[0],pred_tensor.size[1],pred_tensor.size[2]), lw_th)\n",
+        "\n",
+        "    high_tensor = torch.full((pred_tensor.shape[0],pred_tensor.shape[1],pred_tensor.shape[2]), hi_th)\n",
+        "    lw_tensor = torch.full((pred_tensor.shape[0],pred_tensor.shape[1],pred_tensor.shape[2]), lw_th)\n",
+        "#compare the pred with the high and low_tensor\n",
+        "    pred_comp_hi = torch.gt(pred_tensor,high_tensor)\n",
+        "    pred_comp_lw = torch.le(pred_tensor,lw_tensor)\n",
+        "\n",
+        "# an or to know if it is extreme or not  \n",
+        "    extreme_pred = torch.logical_or(pred_comp_hi,pred_comp_lw)\n",
+        "#compare the true with the high and low\n",
+        "    true_comp_hi = torch.le(true_tensor,high_tensor)\n",
+        "    true_comp_lw = torch.gt(true_tensor,lw_tensor)\n",
+        "\n",
+        "# an and to know if it is extreme or not\n",
+        "    extreme_true = torch.logical_and(true_comp_hi,true_comp_lw)\n",
+        "#get the and of the 2 above\n",
+        "\n",
+        "    extreme_final = torch.logical_and(extreme_pred,extreme_true)\n",
         "\n",
         "  #get the diff from the pred and true\n",
-        "\n",
-        "\n",
-        "\n",
+        "    true_comp_hi_2 = torch.gt(true_tensor,high_tensor)\n",
+        "    true_comp_lw_2 = torch.le(true_tensor,lw_tensor)\n",
+        "    \n",
+        "    true_or = torch.logical_or(true_comp_hi_2,true_comp_lw_2)\n",
+        "    \n",
+        "    pred_comp_hi_2 = torch.le(pred_tensor,high_tensor)\n",
+        "    pred_comp_lw_2 = torch.gt(pred_tensor,lw_tensor)\n",
+        "    \n",
+        "    pred_or = torch.logical_or(pred_comp_hi_2,pred_comp_lw_2)\n",
+        "    # an and to know if it is extreme or not\n",
+        "    extreme_final_2 = torch.logical_and(true_or,pred_or)\n",
+        "    \n",
         "  # change the values of the true and false to the hyperparamters of the loss\n",
         "\n",
+        "    boolean_tensor = torch.logical_or(extreme_final,extreme_final_2)\n",
+        "    int_tensor = boolean_tensor.long()\n",
+        "    \n",
+        "  # change the boolean tensor with values\n",
+        "    x = torch.where(int_tensor==1,int_tensor, 5)\n",
+        "    x = x.double()\n",
+        "    final_tensor = torch.where(x==0, x ,0.2)\n",
         "\n",
+        "# element-wise subtraction\n",
+        "    loss_tensor = torch.subtract(pred_tensor,true_tensor)\n",
         "\n",
-        "  # do multiplication of the 2 above \n",
-        "\n",
-        "\n"
+        "#element-wise mul of loss with \n",
+        "    product = torch.mul(loss_tensor, final_tensor)\n",
+        "    product = torch.tensor(product, requires_grad=False)\n",
+        "    #print(product.shape)\n",
+        "    #print((-torch.sum(product)))\n",
+        "    \n",
+        "    return(product)"
       ],
-      "execution_count": 32,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -280,7 +305,7 @@
         "  #print(torch.sum(loss_tensor)) \n",
         "  return torch.sum(loss_tensor)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -294,7 +319,7 @@
         "from darts.models import RNNModel, TCNModel, TransformerModel, NBEATSModel, BlockRNNModel\n",
         "from darts.metrics import mape, smape"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -316,7 +341,7 @@
         "#error_follower = mape(val_follower[:36],pred_follower)\n",
         "print(\"this is the error for the tweet_count:\",error_tweet )"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -783,7 +808,7 @@
         "#fig1.savefig('forecast_75_days.png')\n",
         "print('MAPE = {:.2f}%'.format(mape(series_ai_count, pred_ai)))\n"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
