--- a/extreme_loss.ipynb
+++ b/extreme_loss.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "extreme loss.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOyhzIgApP7FX/qPn25N6WT",
+      "authorship_tag": "ABX9TyO1GdztdZB/2aNCav+E3Ehr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -338,6 +338,22 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "WG9Z6tTaBUAU"
+      },
+      "source": [
+        "def try_loss(pred_tensor, true_tensor):\n",
+        "  loss = torch.subtract(pred_tensor,true_tensor)\n",
+        "  l = torch.mean(loss)\n",
+        "  l = l.clone().detach().requires_grad_(True)\n",
+        "  #print(l)\n",
+        "  return l"
+      ],
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "5vhYcyNE8WSa"
       },
       "source": [
@@ -423,11 +439,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZHZl5xhw8WXx",
-        "outputId": "55c677b0-657f-4bef-cad2-f8fcd238b0b7"
+        "outputId": "055e7fb5-db35-4013-96ad-35c5cdd0aef1"
       },
       "source": [
-        "model_ai = NBEATSModel(input_chunk_length=60, output_chunk_length=7, n_epochs=100, random_state=0,\n",
-        "                                          loss_fn = extreme_tensor )\n",
+        "model_ai = NBEATSModel(input_chunk_length=60, output_chunk_length=7, n_epochs=30, random_state=0,\n",
+        "                                          loss_fn = try_loss )\n",
         "model_ai.fit([train_tweet_count],val_series = [val_tweet_count], verbose=True)\n",
         "pred_ai = model_ai.predict(n=88, series = train_tweet_count )\n",
         "#pred_follower = model_ai_multiple.predict(n=36, series = train_follower )\n",
@@ -435,161 +451,59 @@
         "#error_follower = mape(val_follower[:36],pred_follower)\n",
         "print(\"this is the error for the tweet_count:\",error_tweet )"
       ],
-      "execution_count": 21,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "[2021-11-30 14:05:35,525] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
-            "[2021-11-30 14:05:35,525] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
-            "[2021-11-30 14:05:35,623] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
-            "[2021-11-30 14:05:35,623] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
-            "  0%|          | 0/100 [00:00<?, ?it/s]/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:53: UserWarning:\n",
-            "\n",
-            "To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-            "\n",
-            "  1%|          | 1/100 [00:00<00:33,  2.95it/s]"
+            "[2021-11-30 14:17:37,084] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
+            "[2021-11-30 14:17:37,084] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
+            "[2021-11-30 14:17:37,210] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
+            "[2021-11-30 14:17:37,210] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
+            "  3%|▎         | 1/30 [00:00<00:09,  3.02it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 2.0981, validation loss: 5.5890, best val loss: 5.5890\r"
+            "Training loss: 0.0525, validation loss: 0.1535, best val loss: 0.1535\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 11%|█         | 11/100 [00:03<00:26,  3.39it/s]"
+            " 37%|███▋      | 11/30 [00:03<00:05,  3.30it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 2.0981, validation loss: 5.5890, best val loss: 5.5890\r"
+            "Training loss: 0.0528, validation loss: 0.1535, best val loss: 0.1535\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 21%|██        | 21/100 [00:06<00:22,  3.46it/s]"
+            " 70%|███████   | 21/30 [00:06<00:02,  3.39it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 2.0981, validation loss: 5.5890, best val loss: 5.5890\r"
+            "Training loss: 0.0474, validation loss: 0.1535, best val loss: 0.1535\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 31%|███       | 31/100 [00:08<00:19,  3.51it/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training loss: 2.0981, validation loss: 5.5890, best val loss: 5.5890\r"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            " 41%|████      | 41/100 [00:11<00:16,  3.50it/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training loss: 2.0981, validation loss: 5.5890, best val loss: 5.5890\r"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            " 51%|█████     | 51/100 [00:14<00:13,  3.51it/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training loss: 2.0981, validation loss: 5.5890, best val loss: 5.5890\r"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            " 61%|██████    | 61/100 [00:17<00:11,  3.53it/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training loss: 2.0981, validation loss: 5.5890, best val loss: 5.5890\r"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            " 71%|███████   | 71/100 [00:20<00:08,  3.50it/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training loss: 2.0981, validation loss: 5.5890, best val loss: 5.5890\r"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            " 81%|████████  | 81/100 [00:22<00:05,  3.52it/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training loss: 2.0981, validation loss: 5.5890, best val loss: 5.5890\r"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            " 91%|█████████ | 91/100 [00:25<00:02,  3.54it/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training loss: 2.0981, validation loss: 5.5890, best val loss: 5.5890\r"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 100/100 [00:28<00:00,  3.55it/s]\n"
+            "100%|██████████| 30/30 [00:08<00:00,  3.43it/s]\n"
           ]
         },
         {
