--- a/extreme_loss.ipynb
+++ b/extreme_loss.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "extreme loss.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO1GdztdZB/2aNCav+E3Ehr",
+      "authorship_tag": "ABX9TyPWlHvZ1pS6d3hGwdfa3YHp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -342,13 +342,14 @@
       },
       "source": [
         "def try_loss(pred_tensor, true_tensor):\n",
+        "  #print(\"print\",len(pred_tensor), len(pred_tensor[0]), len(true_tensor))\n",
         "  loss = torch.subtract(pred_tensor,true_tensor)\n",
         "  l = torch.mean(loss)\n",
-        "  l = l.clone().detach().requires_grad_(True)\n",
+        "  #l = l.clone().detach().requires_grad_(True)\n",
         "  #print(l)\n",
         "  return l"
       ],
-      "execution_count": 24,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -439,7 +440,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZHZl5xhw8WXx",
-        "outputId": "055e7fb5-db35-4013-96ad-35c5cdd0aef1"
+        "outputId": "91c5dfb7-a770-4ee7-df43-953512f13da2"
       },
       "source": [
         "model_ai = NBEATSModel(input_chunk_length=60, output_chunk_length=7, n_epochs=30, random_state=0,\n",
@@ -451,66 +452,66 @@
         "#error_follower = mape(val_follower[:36],pred_follower)\n",
         "print(\"this is the error for the tweet_count:\",error_tweet )"
       ],
-      "execution_count": 27,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "[2021-11-30 14:17:37,084] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
-            "[2021-11-30 14:17:37,084] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
-            "[2021-11-30 14:17:37,210] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
-            "[2021-11-30 14:17:37,210] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
-            "  3%|▎         | 1/30 [00:00<00:09,  3.02it/s]"
+            "[2021-11-30 14:23:10,763] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
+            "[2021-11-30 14:23:10,763] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
+            "[2021-11-30 14:23:10,852] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
+            "[2021-11-30 14:23:10,852] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
+            "  3%|▎         | 1/30 [00:01<00:52,  1.83s/it]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 0.0525, validation loss: 0.1535, best val loss: 0.1535\r"
+            "Training loss: -7.4434, validation loss: -56.3490, best val loss: -56.3490\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 37%|███▋      | 11/30 [00:03<00:05,  3.30it/s]"
+            " 37%|███▋      | 11/30 [00:17<00:29,  1.55s/it]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 0.0528, validation loss: 0.1535, best val loss: 0.1535\r"
+            "Training loss: -20086663914186870505965385235171440688779455564843437916591334571047797908561398200423835388947416997691392.0000, validation loss: -1932429187932018034774845858627762057738511502150546227791235365830872935676819248565538372656491330648670208.0000, best val loss: -1932429187932018034774845858627762057738511502150546227791235365830872935676819248565538372656491330648670208.0000\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 70%|███████   | 21/30 [00:06<00:02,  3.39it/s]"
+            " 70%|███████   | 21/30 [00:33<00:16,  1.81s/it]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 0.0474, validation loss: 0.1535, best val loss: 0.1535\r"
+            "Training loss: -1391308371362368958223449561111990201413874069986116090155747072140379348617301334595935894629681525543479841540193202732250356735502470773185781283175113162752.0000, validation loss: -1329286614869191008520841194546284358255561492281953490790239176932117904547446188193500487253134022766466176788869381413275983087016111338998373276331160895488.0000, best val loss: -1329286614869191008520841194546284358255561492281953490790239176932117904547446188193500487253134022766466176788869381413275983087016111338998373276331160895488.0000\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 30/30 [00:08<00:00,  3.43it/s]\n"
+            "100%|██████████| 30/30 [00:51<00:00,  1.71s/it]\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "this is the error for the tweet_count: 629.2356661820182\n"
+            "this is the error for the tweet_count: 6.264386003240313e+161\n"
           ]
         }
       ]
