--- a/extreme_loss.ipynb
+++ b/extreme_loss.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "extreme loss.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPWlHvZ1pS6d3hGwdfa3YHp",
+      "authorship_tag": "ABX9TyNxW3jBnbnGeT6U9HdJEVXF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -341,15 +341,25 @@
         "id": "WG9Z6tTaBUAU"
       },
       "source": [
-        "def try_loss(pred_tensor, true_tensor):\n",
+        "def try_loss(pred, true):\n",
         "  #print(\"print\",len(pred_tensor), len(pred_tensor[0]), len(true_tensor))\n",
-        "  loss = torch.subtract(pred_tensor,true_tensor)\n",
-        "  l = torch.mean(loss)\n",
+        "  h = 0.8\n",
+        "  l = 0.2\n",
+        "\n",
+        "  loss = torch.tensor(0.0, requires_grad=True)\n",
+        "  l = 0\n",
+        "  for i in range(0,len(pred)):\n",
+        "    for j in range(0,len(pred[0])):\n",
+        "      if((true[i][j]>h or true[i][j]<l) and (pred[i][j] <= h and pred[i][j] >= l)):\n",
+        "        loss =  torch.abs(torch.tensor(true[i][j]-pred[i][j], requires_grad=True))\n",
+        "        #print('l',loss)\n",
+        "  #loss = torch.subtract(pred_tensor,true_tensor)\n",
+        "  #l = torch.mean(loss)\n",
         "  #l = l.clone().detach().requires_grad_(True)\n",
         "  #print(l)\n",
-        "  return l"
+        "  return torch.mean(loss)"
       ],
-      "execution_count": 37,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -430,7 +440,7 @@
         "from darts.models import RNNModel, TCNModel, TransformerModel, NBEATSModel, BlockRNNModel\n",
         "from darts.metrics import mape, smape"
       ],
-      "execution_count": 20,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -440,7 +450,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZHZl5xhw8WXx",
-        "outputId": "91c5dfb7-a770-4ee7-df43-953512f13da2"
+        "outputId": "f407ab33-bdf5-458b-df09-00d92a54230b"
       },
       "source": [
         "model_ai = NBEATSModel(input_chunk_length=60, output_chunk_length=7, n_epochs=30, random_state=0,\n",
@@ -452,66 +462,70 @@
         "#error_follower = mape(val_follower[:36],pred_follower)\n",
         "print(\"this is the error for the tweet_count:\",error_tweet )"
       ],
-      "execution_count": 38,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "[2021-11-30 14:23:10,763] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
-            "[2021-11-30 14:23:10,763] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
-            "[2021-11-30 14:23:10,852] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
-            "[2021-11-30 14:23:10,852] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
-            "  3%|▎         | 1/30 [00:01<00:52,  1.83s/it]"
+            "[2021-11-30 14:57:14,293] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
+            "[2021-11-30 14:57:14,293] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
+            "[2021-11-30 14:57:14,388] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
+            "[2021-11-30 14:57:14,388] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
+            "  0%|          | 0/30 [00:00<?, ?it/s]/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:11: UserWarning:\n",
+            "\n",
+            "To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+            "\n",
+            "  3%|▎         | 1/30 [00:00<00:10,  2.71it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: -7.4434, validation loss: -56.3490, best val loss: -56.3490\r"
+            "Training loss: 0.1728, validation loss: 0.0000, best val loss: 0.0000\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 37%|███▋      | 11/30 [00:17<00:29,  1.55s/it]"
+            " 37%|███▋      | 11/30 [00:03<00:06,  3.09it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: -20086663914186870505965385235171440688779455564843437916591334571047797908561398200423835388947416997691392.0000, validation loss: -1932429187932018034774845858627762057738511502150546227791235365830872935676819248565538372656491330648670208.0000, best val loss: -1932429187932018034774845858627762057738511502150546227791235365830872935676819248565538372656491330648670208.0000\r"
+            "Training loss: 0.2146, validation loss: 0.0000, best val loss: 0.0000\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 70%|███████   | 21/30 [00:33<00:16,  1.81s/it]"
+            " 70%|███████   | 21/30 [00:06<00:02,  3.13it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: -1391308371362368958223449561111990201413874069986116090155747072140379348617301334595935894629681525543479841540193202732250356735502470773185781283175113162752.0000, validation loss: -1329286614869191008520841194546284358255561492281953490790239176932117904547446188193500487253134022766466176788869381413275983087016111338998373276331160895488.0000, best val loss: -1329286614869191008520841194546284358255561492281953490790239176932117904547446188193500487253134022766466176788869381413275983087016111338998373276331160895488.0000\r"
+            "Training loss: 0.1053, validation loss: 0.0000, best val loss: 0.0000\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 30/30 [00:51<00:00,  1.71s/it]\n"
+            "100%|██████████| 30/30 [00:09<00:00,  3.17it/s]\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "this is the error for the tweet_count: 6.264386003240313e+161\n"
+            "this is the error for the tweet_count: 629.2356661820182\n"
           ]
         }
       ]
