--- a/extreme_loss.ipynb
+++ b/extreme_loss.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "extreme loss.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOMoKVTAvSzwUYoP5ygP0ca",
+      "authorship_tag": "ABX9TyNxW3jBnbnGeT6U9HdJEVXF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -351,7 +351,7 @@
         "  for i in range(0,len(pred)):\n",
         "    for j in range(0,len(pred[0])):\n",
         "      if((true[i][j]>h or true[i][j]<l) and (pred[i][j] <= h and pred[i][j] >= l)):\n",
-        "        loss = loss+ torch.abs(torch.tensor(true[i][j]-pred[i][j], requires_grad=True))\n",
+        "        loss =  torch.abs(torch.tensor(true[i][j]-pred[i][j], requires_grad=True))\n",
         "        #print('l',loss)\n",
         "  #loss = torch.subtract(pred_tensor,true_tensor)\n",
         "  #l = torch.mean(loss)\n",
@@ -359,7 +359,7 @@
         "  #print(l)\n",
         "  return torch.mean(loss)"
       ],
-      "execution_count": 70,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -450,7 +450,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZHZl5xhw8WXx",
-        "outputId": "936fc3ad-1942-431b-848a-275a0deed359"
+        "outputId": "29764d37-9f9c-45c2-8c1b-cf9c625bec20"
       },
       "source": [
         "model_ai = NBEATSModel(input_chunk_length=60, output_chunk_length=7, n_epochs=30, random_state=0,\n",
@@ -462,21 +462,35 @@
         "#error_follower = mape(val_follower[:36],pred_follower)\n",
         "print(\"this is the error for the tweet_count:\",error_tweet )"
       ],
-      "execution_count": 71,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "[2021-11-30 14:58:50,571] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
-            "[2021-11-30 14:58:50,571] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
-            "[2021-11-30 14:58:50,669] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
-            "[2021-11-30 14:58:50,669] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
+            "[2021-11-30 15:00:57,442] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
+            "[2021-11-30 15:00:57,442] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
+            "[2021-11-30 15:00:57,543] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
+            "[2021-11-30 15:00:57,543] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
             "  0%|          | 0/30 [00:00<?, ?it/s]/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:11: UserWarning:\n",
             "\n",
             "To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
             "\n",
-            "  3%|▎         | 1/30 [00:00<00:10,  2.66it/s]"
+            "  3%|▎         | 1/30 [00:00<00:11,  2.56it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training loss: 0.1728, validation loss: 0.0000, best val loss: 0.0000\r"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            " 37%|███▋      | 11/30 [00:03<00:06,  3.02it/s]"
           ]
         },
         {
@@ -490,35 +504,21 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 37%|███▋      | 11/30 [00:03<00:06,  3.14it/s]"
+            " 70%|███████   | 21/30 [00:06<00:02,  3.05it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 0.2146, validation loss: 0.0000, best val loss: 0.0000\r"
+            "Training loss: 0.1053, validation loss: 0.0000, best val loss: 0.0000\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 70%|███████   | 21/30 [00:06<00:02,  3.16it/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training loss: 0.2146, validation loss: 0.0000, best val loss: 0.0000\r"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 30/30 [00:09<00:00,  3.18it/s]\n"
+            "100%|██████████| 30/30 [00:09<00:00,  3.11it/s]\n"
           ]
         },
         {
