--- a/extreme_loss.ipynb
+++ b/extreme_loss.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "extreme loss.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNn5KJjpR00MBfKl2oTd/Y+",
+      "authorship_tag": "ABX9TyMWANvNfyJsDoJ3N6i04OfF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -338,15 +338,31 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "RUOXOOJWVizz"
+      },
+      "source": [
+        "a = [0.0]"
+      ],
+      "execution_count": 173,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "WG9Z6tTaBUAU"
       },
       "source": [
         "def try_loss(pred, true):\n",
+        "  global a\n",
+        "  import numpy as np\n",
         "  #print(\"print\",len(pred_tensor), len(pred_tensor[0]), len(true_tensor))\n",
         "  h = 0.8\n",
         "  l = 0.2\n",
         "\n",
         "  loss = torch.tensor(0.0, requires_grad=True)\n",
+        "  \n",
+        "  \n",
+        "  \n",
         "  #torch.cat((A,B))\n",
         "  l = 0\n",
         "  for i in range(0,len(pred)):\n",
@@ -354,17 +370,26 @@
         "      if((true[i][j]>h or true[i][j]<l) and (pred[i][j] <= h and pred[i][j] >= l)):\n",
         "        #temp = torch.tensor(0.0, requires_grad=True)\n",
         "        temp = torch.abs(torch.tensor(true[i][j]-pred[i][j]).clone().detach().requires_grad_(True))\n",
+        "        #loss = torch.unsqueeze(loss, 0)\n",
+        "        #temp = torch.unsqueeze(temp, 0)\n",
+        "        #print('ll',loss,temp)\n",
+        "        np_arr = temp.cpu().detach().numpy().tolist()[0]\n",
+        "        #loss = torch.stack((temp,loss))\n",
+        "        a.append(np_arr)\n",
+        "        #print(a,len(a))\n",
+        "        #print(sum(a))\n",
+        "        #loss =  torch.add(loss,temp)\n",
         "        \n",
-        "        loss =  torch.add(loss,temp)\n",
-        "        #print(loss)\n",
         "        #print('l',loss)\n",
         "  #loss = torch.subtract(pred_tensor,true_tensor)\n",
         "  #l = torch.mean(loss)\n",
         "  #l = l.clone().detach().requires_grad_(True)\n",
         "  #print(l)\n",
+        "  #print(\"sum\",sum(a))\n",
+        "  loss = torch.tensor(sum(a), requires_grad=True)\n",
         "  return torch.mean(loss)"
       ],
-      "execution_count": 88,
+      "execution_count": 176,
       "outputs": []
     },
     {
@@ -455,7 +480,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZHZl5xhw8WXx",
-        "outputId": "6020e21c-ca3b-4c10-b920-bacba24fdef4"
+        "outputId": "0cf35607-bb86-4521-b568-964c01870ad5"
       },
       "source": [
         "model_ai = NBEATSModel(input_chunk_length=60, output_chunk_length=7, n_epochs=30, random_state=0,\n",
@@ -467,63 +492,63 @@
         "#error_follower = mape(val_follower[:36],pred_follower)\n",
         "print(\"this is the error for the tweet_count:\",error_tweet )"
       ],
-      "execution_count": 89,
+      "execution_count": 177,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "[2021-11-30 15:16:00,555] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
-            "[2021-11-30 15:16:00,555] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
-            "[2021-11-30 15:16:00,643] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
-            "[2021-11-30 15:16:00,643] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
-            "  0%|          | 0/30 [00:00<?, ?it/s]/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:13: UserWarning:\n",
+            "[2021-11-30 15:52:51,297] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
+            "[2021-11-30 15:52:51,297] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
+            "[2021-11-30 15:52:51,411] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
+            "[2021-11-30 15:52:51,411] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
+            "  0%|          | 0/30 [00:00<?, ?it/s]/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:18: UserWarning:\n",
             "\n",
             "To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
             "\n",
-            "  3%|▎         | 1/30 [00:00<00:11,  2.52it/s]"
+            "  3%|▎         | 1/30 [00:00<00:10,  2.89it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 0.2146, validation loss: 0.0000, best val loss: 0.0000\r"
+            "Training loss: 46.1245, validation loss: 46.5785, best val loss: 46.5785\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 37%|███▋      | 11/30 [00:03<00:06,  3.07it/s]"
+            " 37%|███▋      | 11/30 [00:03<00:06,  3.15it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 0.2146, validation loss: 0.0000, best val loss: 0.0000\r"
+            "Training loss: 61.0847, validation loss: 61.6038, best val loss: 46.5785\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 70%|███████   | 21/30 [00:06<00:02,  3.01it/s]"
+            " 70%|███████   | 21/30 [00:06<00:02,  3.08it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 0.2146, validation loss: 0.0000, best val loss: 0.0000\r"
+            "Training loss: 76.0096, validation loss: 76.6292, best val loss: 46.5785\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 30/30 [00:09<00:00,  3.14it/s]\n"
+            "100%|██████████| 30/30 [00:09<00:00,  3.17it/s]\n"
           ]
         },
         {
