--- a/extreme_loss.ipynb
+++ b/extreme_loss.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "extreme loss.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMWANvNfyJsDoJ3N6i04OfF",
+      "authorship_tag": "ABX9TyPW+JvTvvOfdm1gRHm+9+FF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -354,6 +354,7 @@
       "source": [
         "def try_loss(pred, true):\n",
         "  global a\n",
+        "  a = [0.0]\n",
         "  import numpy as np\n",
         "  #print(\"print\",len(pred_tensor), len(pred_tensor[0]), len(true_tensor))\n",
         "  h = 0.8\n",
@@ -387,9 +388,9 @@
         "  #print(l)\n",
         "  #print(\"sum\",sum(a))\n",
         "  loss = torch.tensor(sum(a), requires_grad=True)\n",
-        "  return torch.mean(loss)"
+        "  return loss"
       ],
-      "execution_count": 176,
+      "execution_count": 178,
       "outputs": []
     },
     {
@@ -480,7 +481,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZHZl5xhw8WXx",
-        "outputId": "0cf35607-bb86-4521-b568-964c01870ad5"
+        "outputId": "35ffcf66-a391-4699-c576-d7301b9f08a8"
       },
       "source": [
         "model_ai = NBEATSModel(input_chunk_length=60, output_chunk_length=7, n_epochs=30, random_state=0,\n",
@@ -492,63 +493,63 @@
         "#error_follower = mape(val_follower[:36],pred_follower)\n",
         "print(\"this is the error for the tweet_count:\",error_tweet )"
       ],
-      "execution_count": 177,
+      "execution_count": 179,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "[2021-11-30 15:52:51,297] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
-            "[2021-11-30 15:52:51,297] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
-            "[2021-11-30 15:52:51,411] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
-            "[2021-11-30 15:52:51,411] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
-            "  0%|          | 0/30 [00:00<?, ?it/s]/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:18: UserWarning:\n",
+            "[2021-11-30 15:55:05,465] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
+            "[2021-11-30 15:55:05,465] INFO | darts.models.forecasting.torch_forecasting_model | Train dataset contains 208 samples.\n",
+            "[2021-11-30 15:55:05,563] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
+            "[2021-11-30 15:55:05,563] INFO | darts.models.forecasting.torch_forecasting_model | Time series values are 64-bits; casting model to float64.\n",
+            "  0%|          | 0/30 [00:00<?, ?it/s]/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:19: UserWarning:\n",
             "\n",
             "To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
             "\n",
-            "  3%|▎         | 1/30 [00:00<00:10,  2.89it/s]"
+            "  3%|▎         | 1/30 [00:00<00:11,  2.61it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 46.1245, validation loss: 46.5785, best val loss: 46.5785\r"
+            "Training loss: 0.2146, validation loss: 0.0000, best val loss: 0.0000\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 37%|███▋      | 11/30 [00:03<00:06,  3.15it/s]"
+            " 37%|███▋      | 11/30 [00:03<00:06,  3.05it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 61.0847, validation loss: 61.6038, best val loss: 46.5785\r"
+            "Training loss: 0.2146, validation loss: 0.0000, best val loss: 0.0000\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            " 70%|███████   | 21/30 [00:06<00:02,  3.08it/s]"
+            " 70%|███████   | 21/30 [00:06<00:02,  3.16it/s]"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Training loss: 76.0096, validation loss: 76.6292, best val loss: 46.5785\r"
+            "Training loss: 0.2146, validation loss: 0.0000, best val loss: 0.0000\r"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 30/30 [00:09<00:00,  3.17it/s]\n"
+            "100%|██████████| 30/30 [00:09<00:00,  3.15it/s]\n"
           ]
         },
         {
